--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-redux": "^9.1.2",
     "react-router": "^6.23.1",
     "react-router-dom": "^6.23.1",
+    "react-scripts": "^5.0.1",
     "redux": "^5.0.1",
     "vite-plugin-svgr": "^4.2.0"
   },
