Added and styled Error + Loader + Not found and created devMode for devLog

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,7 +23,7 @@
     "noFallthroughCasesInSwitch": true,
 
     /* Addon */
-    "types": ["vite-plugin-svgr/client"],
+    "types": ["vite-plugin-svgr/client", "node"],
     "baseUrl": ".",
     "paths": {
       "@/*": ["src/*"]
