--- a/package.json
+++ b/package.json
@@ -20,11 +20,11 @@
     "react-router": "^6.23.1",
     "react-router-dom": "^6.23.1",
     "react-scripts": "^5.0.1",
-    "redux": "^5.0.1",
-    "vite-plugin-svgr": "^4.2.0"
+    "redux": "^5.0.1"
   },
   "devDependencies": {
     "@types/dompurify": "^3.0.5",
+    "@types/node": "^20.14.2",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
     "@types/react-lazy-load-image-component": "^1.6.4",
@@ -36,6 +36,7 @@
     "eslint-plugin-react-refresh": "^0.4.6",
     "sass": "^1.77.4",
     "typescript": "^5.2.2",
-    "vite": "^5.2.0"
+    "vite": "^5.2.0",
+    "vite-plugin-svgr": "^4.2.0"
   }
 }
