--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
     "sass": "^1.77.4",
-    "typescript": "^5.2.2",
+    "typescript": "4.9.5",
     "vite": "^5.2.0",
     "vite-plugin-svgr": "^4.2.0"
   }
